--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,19 @@
 <%- include("../partials/nav-bar.ejs") %>
-
-<h1>Bohun Upas</h1>
-<p>Welcome Ironhacker!</p>
-
-<% if (session) { %>
+<section id="newsSection">
+    <br>
+<!-- <% if (session) { %>
     <div>YOU ARE LOGGED IN</div>
 <% } else { %>
     <div>YOU ARE LOGGED OUT</div>
-<% } %>
+<% } %> -->
+
+<!-- <p class="newsTitle">News</p> -->
+
+<div class="newsArticle">
+    <img src="../images/Weapons/swampy.png" width="280px">
+    <div>
+        <h1 class="articleTitle">Iron Contest</h1>
+        <p class="articlePara">Kill Ecrol before one hour after the class ends to recieve "Swampy", a low drop-rate legendary sword with the highest single shot damage in the game! Ecrol can be found in the cave, which is unlocked after defeating the Meadow. If you kill Ecrol during the set time-frame, check your inbox shortly afterwards to recieve your reward</p>
+    </div>
+</div>
+</section>
