Attachment for messages fixed for the most part

--- a/views/friends/new-message.ejs
+++ b/views/friends/new-message.ejs
@@ -12,10 +12,12 @@
                 <% if (!attachment) { %>
                     <div>Attachment:</div><button class="buttonItem" style="width: 120px;" type="submit" name="attachmentBtn" value="attachmentBtn">Attach item</button>
                 <% } else if (item === null) { %>
-                    <%- include("../../partials/inventory-display.ejs") %>
+                    <%- include("../../partials/inventory-display.ejs", {character: character}) %> 
                 <% } else { %>
                     <%- include("../../partials/item-card.ejs") %>
-                    <button class="buttonItem" type="submit" name="removeAttachedItemBtn" value="removeAttachedItemBtn">Remove attachment</button>
+                    <input value="<%=item._id%>" name="attachedItem" style="display: none;"/>
+                    <input value="hasattachment" name="attachmentcheck" style="display: none;"/>
+                    <button class="buttonItem btnWider" type="submit" name="removeAttachedItemBtn" value="removeAttachedItemBtn">Remove attachment</button>
                 <% } %>
                 <div class="centerText"><button class="buttonItem" style="width: 120px;" type="submit" name="sendBtn" value="sendBtn">Send message</button></div>
             </form>
