--- a/views/friends/index.ejs
+++ b/views/friends/index.ejs
@@ -80,7 +80,7 @@
                                             </form>
                                         </div>
                                     <% } else if (message.messageType === "message") { %>
-                                        <% if (message.attachment !== null) { %>
+                                        <% if (message.attachment.length) { %>
                                             <div>Attachment:<%- include("../../partials/item-card.ejs", {item: message.attachment}) %></div>
                                             <form action="/friends/claim-attachment/<%=message._id%>" method="POST">
                                                 <button class="buttonItem btnWider" type="submit">Claim attachment</button>
