--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -21,7 +21,7 @@
         <% if (sessionRace.length === 1) { %>
         <li>
           <p>
-            <a style="text-decoration: none" href="/user/createcharacter">
+            <a style="text-decoration: none" href="/user/createCharacter">
               <div class="navImg">
                 <img src="/images/Icons/Bag.png" height="60px" />
               </div>
@@ -52,7 +52,7 @@
         <% } else { %>         
           <li>
           <p>
-            <a style="text-decoration: none" href="/user/createcharacter">
+            <a style="text-decoration: none" href="/user/createCharacter">
               <div class="navImg">
                 <img src="/images/Icons/Bag.png" height="60px" />
               </div>
@@ -88,7 +88,7 @@
         <a
           id="btn-playnow"
           style="text-decoration: none"
-          href="/user/createcharacter"
+          href="/user/createCharacter"
         >
           Play Now
         </a>
