--- a/views/user/createCharacter.ejs
+++ b/views/user/createCharacter.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/nav-bar.ejs") %>
 <section>
-    <form method="POST" action="/user/createcharacter">      
+    <form method="POST" action="/user/createCharacter">      
   
       <label for="">
         Choose race:
