Trying chromium workaround

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -8,7 +8,7 @@
         <label class="alignLogin usernameLogin">Password<input class="cleanInput" type="password" name="password" autofocus></label>
         <button class="buttonItem widerButton" type="submit">Log In</button>
         <div>
-            <a href="#"" id="forgotPassword">Forgot your password?</a>
+            <a href="#" id="forgotPassword">Forgot your password?</a>
         </div>
     </form>
     <% if (errorMessage !== "") { %>
