--- a/views/user/game.ejs
+++ b/views/user/game.ejs
@@ -12,8 +12,12 @@
 <% } %>
 
 <div id="game-board" style="display: flex; align-items: center; justify-content: center;">
-    <canvas id="canvas" width="1200" height="700"></canvas>
+    <div class="chromium-issue-1092080-workaroundwrapper">
+            <canvas id="canvas" width="1200" height="700"></canvas>
+        <div class="chromium-issue-1092080-workaroundoverlay"></div>
+    </div>
 </div>  
+
 
 
 </div> 
