--- a/views/user/game.ejs
+++ b/views/user/game.ejs
@@ -77,7 +77,7 @@
                 <label>XP: <input class="buttonUnformat statsInGame" id="experience" style="display: block;" name="experience" type="number" value="<%=sessionRace2.character[0].experience%>" readonly></input></label> 
             </div> 
             <% } %></p>
-            <button type="submit">Save</button>
+            <button id="saveGameButton" type="submit" style="display: none;">Save</button>
         </form>
         
         </div>
