one enemy movement level 1

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -289,6 +289,12 @@ h1 {
   width: 900px; 
 }  
 
+.marketplaceBtn {
+  width: 300px;
+  height: 100px;
+  font-size: 20px;
+}
+
 .selectOffer {
   align-items: center;  
   display: flex;   
