--- a/views/marketplace/index.ejs
+++ b/views/marketplace/index.ejs
@@ -9,13 +9,13 @@
     </div>
     <div class="mpIndexBtnCtn">
         <form action="/marketplace/select-offer/" method="GET">
-            <button class="buttonItem btnWider" type="submit">Create an offer</button>
+            <button class="buttonItem btnWider marketplaceBtn" type="submit">Create an offer</button>
         </form>
         <form action="/marketplace/view-own-offers/" method="GET">
-            <button class="buttonItem btnWider" type="submit">View your offers</button>
+            <button class="buttonItem btnWider marketplaceBtn" type="submit">View your offers</button>
         </form>
         <form action="/marketplace/browse-offers/" method="GET">
-            <button class="buttonItem btnWider" type="submit">Browse offers</button>
+            <button class="buttonItem btnWider marketplaceBtn" type="submit">Browse offers</button>
         </form>
     </div>
 <% } %>
