--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -533,7 +533,7 @@ input:focus {
 
 #friendsMessagesSite {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -546,6 +546,24 @@ input:focus {
 .friendAcceptRejectBtnCtn {
   display: flex;
   gap: 5px;
+}
+
+.messageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start
+  
+}
+.messageCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 20px 30px;
+  border: 1px rgb(132, 83, 61) solid;
+}
+
+.messageCard li {
+  list-style: none;
 }
 
 .inGameStats {
