--- a/partials/item-card.ejs
+++ b/partials/item-card.ejs
@@ -3,6 +3,7 @@
         <!-- <li id="equipment">Equipment</li> -->
         <ul class="removeListStyle allignList">
             <li><img class="itemImage" src="../../../<%=item.image%>" width="130px"></li>
+            <% console.log(item) %>
             <div class="weaponStats">                   
             <li class="itemName"><%=item.name%></li>
                 <div class="inlineStats">                            
