--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -534,7 +534,8 @@ input:focus {
 #friendsMessagesSite {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
+  
 }
 
 #friendsSection {
@@ -552,8 +553,18 @@ input:focus {
   display: flex;
   flex-direction: column;
   align-items: flex-start
-  
 }
+
+#messageSection {
+  display: flex;
+  
+  width: 800px;
+}
+
+#friendsSection {
+  width: 800px;
+}
+
 .messageCard {
   display: flex;
   flex-direction: column;
