--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -83,9 +83,9 @@
       </ul>
     </div>
 
-    <div id="navRight">
+    <div id="navRight" >
       <% if (session) { %> <% if (sessionRace.length === 0) { %>
-      <p>
+      <p  class="buttonItem widerButton playnow">
         <a
           id="btn-playnow"
           style="text-decoration: none"
@@ -95,7 +95,7 @@
         </a>
       </p>
       <% } else { %>
-      <p>
+      <p  class="buttonItem widerButton playnow">
         <a id="btn-playnow" style="text-decoration: none" href="/user/game">
           Play Now
         </a>
@@ -107,7 +107,7 @@
         </a>
       </p>
       <% } else { %>
-      <p>
+      <p  class="buttonItem widerButton playnow">
         <a
           id="btn-playnow"
           style="text-decoration: none"
