--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,30 +1,30 @@
 <%- include("../../partials/nav-bar.ejs") %>
-<section>
-  <form method="POST" action="/auth/signup">
-    <h1>Sign Up</h1>
+<section class="alignLogin loginTitle" >
+  <h1>Sign Up</h1>
+  <form class="alignLogin itemTable  signup" method="POST" action="/auth/signup" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
 
     <label for="">
       Username:
-      <input type="text" name="username" value="<%=username%>" required />
+      <input class="cleanInput" type="text" name="username" value="<%=username%>" required />
     </label>
 
     <label for="">
       Email:
-      <input type="email" name="email" value="<%=email%>" required autofocus />
+      <input class="cleanInput" type="email" name="email" value="<%=email%>" required autofocus />
     </label>
 
     <label for="">
       Password:
-      <input type="password" name="password" required />
+      <input class="cleanInput" type="password" name="password" required />
     </label>
 
     <label for="">
       Confirm password:
-      <input type="password" name="Rpassword" required />
+      <input class="cleanInput" type="password" name="Rpassword" required />
     </label>
 
 
-    <button type="submit">Sign Up</button>
+    <button class="buttonItem widerButton" type="submit">Sign Up</button>
   </form>
 
   <% if (errorMessage !== "") { %>
