--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,7 @@ h1 {
 #navRight {
   display: flex;
   gap: 30px;
+  padding-top: 20px;
 }
 
 #gameSection {
@@ -570,7 +571,7 @@ input:focus {
   flex-direction: column;
   justify-content: flex-start;
   padding: 20px 30px;
-  border: 1px rgb(132, 83, 61) solid;
+ 
 }
 
 .messageCard li {
@@ -751,4 +752,39 @@ justify-items: center;
   padding-bottom: 50px;
   line-height: 30px;
   font-size: 30px;
+}
+
+.messages {
+  display: flex;
+}
+
+.buttonItemPlay {
+  border-radius: 8px;
+  border-style: solid;
+  height: 40px;
+  width: 150px;
+  border-color: rgba(61, 36, 33, 0.644);
+  background-color: rgb(36, 27, 25); 
+  border-width: 2px;
+  box-shadow: 0 5px rgb(19, 12, 11);
+  padding-bottom: 0px;
+  padding-top: 15px;
+  margin-bottom: 5px;
+  color:white;
+  font-weight: bolder;
+  text-align: center;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.buttonItemPlay:hover {
+  background-color: greenyellow;
+  color: #0C0C11;
+}
+
+#btn-playnow {
+  color: #ffffff;
+}
+
+#btn-playnow:hover {
+  color: #000000;
 }
