--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,35 @@
 <!-- <p class="newsTitle">News</p> -->
 
 <div class="newsArticle">
-    <img src="../images/Weapons/swampy.png" width="280px">
+    <iframe class="newsIframe" src="https://my.spline.design/untitled-ef19f0c9abde3c51a0934eafe60ba4d9/" width="600px" height="600px"></iframe>
     <div>
-        <h1 class="articleTitle">Iron Contest</h1>
-        <p class="articlePara">Kill Ecrol before one hour after the class ends to recieve "Swampy", a low drop-rate legendary sword with the highest single shot damage in the game! Ecrol can be found in the cave, which is unlocked after defeating the Meadow. If you kill Ecrol during the set time-frame, check your inbox shortly afterwards to recieve your reward</p>
+        <h1 class="articleTitle">Ahoy plants!</h1>
+        <p class="articlePara">Let's talk about one of the upcoming updates, plants!<br><br>Now you will be able to grow your own little plants on your garden, be sure to water them every here and there so they grow stong and healthy!
+         After your plant is fully grown you will be ablet to use it's fruit to enchant your weapons and make the ultimate monster killer. Or perhaps you are more of a salesman uhu? well why not grow plants and sell their fruits on the marketplace for a hefty price?
+         <br><br>With the plant system the game will give you a bit of that farming felling that we all love so much.
+        </p>
     </div>
 </div>
+
+<!-- <div class="newsArticle">
+    <div>
+        <h1 class="articleTitle">Ahoy plants!</h1>
+        <p class="articlePara">Let's talk about one of the upcoming updates, plants!<br><br>Now you will be able to grow your own little plants on your garden, be sure to water them every here and there so they grow stong and healthy!
+         After your plant is fully grown you will be ablet to use it's fruit to enchant your weapons and make the ultimate monster killer. Or perhaps you are more of a salesman uhu? well why not grow plants and sell their fruits on the marketplace for a hefty price?
+         <br><br>With the plant system the game will give you a bit of that farming felling that we all love so much.
+        </p>
+    </div>
+    <iframe class="newsIframe" src="https://my.spline.design/untitled-ef19f0c9abde3c51a0934eafe60ba4d9/" width="600px" height="600px"></iframe>
+</div>
+
+<div class="newsArticle">
+    <iframe class="newsIframe" src="https://my.spline.design/untitled-ef19f0c9abde3c51a0934eafe60ba4d9/" width="600px" height="600px"></iframe>
+    <div>
+        <h1 class="articleTitle">Ahoy plants!</h1>
+        <p class="articlePara">Let's talk about one of the upcoming updates, plants!<br><br>Now you will be able to grow your own little plants on your garden, be sure to water them every here and there so they grow stong and healthy!
+         After your plant is fully grown you will be ablet to use it's fruit to enchant your weapons and make the ultimate monster killer. Or perhaps you are more of a salesman uhu? well why not grow plants and sell their fruits on the marketplace for a hefty price?
+         <br><br>With the plant system the game will give you a bit of that farming felling that we all love so much.
+        </p>
+    </div>
+</div> -->
 </section>
