Pulling to implement spritesheets, then pushing new version

--- a/views/friends/index.ejs
+++ b/views/friends/index.ejs
@@ -61,7 +61,7 @@
         </section>
         <section id="messageSection" >
             <div>
-                <h2>Messages</h2>
+                <h2 class="centerText">Messages</h2>
                 <div>
                     <div>
                         <% if (currentUser.messages.length) { %>
