--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
 
-#dino {
-  display: none;
-}
-#slime {
-  display: none;
-}
-#slimeBoss {
-  display: none;
-}
-#bat {
-  display: none;
-}
-#enemyProjectileFire {
-  display: none;
-}
+#dino,
+#human,
+#slime,
+#slimeBoss,
+#bat,
+#enemyProjectileFire,
 #ecrol0,
 #ecrol1,
 #ecrol2,
