Pushing new version let's hope it works fingers crossed I BELIEVE!

--- a/views/user/game.ejs
+++ b/views/user/game.ejs
@@ -10,7 +10,8 @@
     <canvas id="canvas" width="1200" height="700"></canvas>
     <progress id="health" value="100" max="100"></progress>
     <img src="../../images/Races/Dino/dino.png" alt="dino" id="dino"/>
-    <img src="../../images/Races/Human/human.png" alt="human" id="human"/>
+    <img src="../../images/Races/Undead/Undead.png" alt="undead" id="undead"/>
+    <img src="../../images/Races/Human/Human.png" alt="human" id="human"/>
     <img src="../../images/Meadow/Slime/slime.png" alt="slime" id="slime"/>
     <img src="../../images/Meadow/SlimeBoss/slimeBoss.png" alt="slimeBoss" id="slimeBoss"/>
     <img src="../../images/Dungeon/Bat/bat.png" alt="bat" id="bat"/>
