--- a/views/user/game.ejs
+++ b/views/user/game.ejs
@@ -14,12 +14,12 @@
     <img src="../../images/Races/Human/Human.png" alt="human" id="human"/>
     <img src="../../images/Meadow/Slime/slime.png" alt="slime" id="slime"/>
     <img src="../../images/Meadow/SlimeBoss/slimeBoss.png" alt="slimeBoss" id="slimeBoss"/>
-    <img src="../../images/Dungeon/Bat/bat.png" alt="bat" id="bat"/>
+    <img src="../../images/Cave/Bat/bat.png" alt="bat" id="bat"/>
     <img src="../../images/Projectiles/weakFire.png" alt="enemyProjectileFire" id="enemyProjectileFire"/>
-    <img src="../../images/Dungeon/Ecrol/ecrol0.png" alt="ecrol" id="ecrol0"/>
-    <img src="../../images/Dungeon/Ecrol/ecrol1.png" alt="ecrol" id="ecrol1"/>
-    <img src="../../images/Dungeon/Ecrol/ecrol2.png" alt="ecrol" id="ecrol2"/>
-    <img src="../../images/Dungeon/Ecrol/ecrol3.png" alt="ecrol" id="ecrol3"/>
+    <img src="../../images/Cave/Ecrol/ecrol0.png" alt="ecrol" id="ecrol0"/>
+    <img src="../../images/Cave/Ecrol/ecrol1.png" alt="ecrol" id="ecrol1"/>
+    <img src="../../images/Cave/Ecrol/ecrol2.png" alt="ecrol" id="ecrol2"/>
+    <img src="../../images/Cave/Ecrol/ecrol3.png" alt="ecrol" id="ecrol3"/>
 </div>  
 
 </div> 
